--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "repository": "git@github.com:BaseW/mynews.git",
   "author": "wada <wada@avita.co.jp>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "selenium-webdriver": "^4.1.2"
+  }
 }
