--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "selenium-webdriver": "^4.1.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
