--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mynews",
   "version": "0.1.0",
   "description": "mynews",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "git@github.com:BaseW/mynews.git",
   "author": "wada <wada@avita.co.jp>",
   "license": "Apache-2.0",
@@ -10,6 +10,7 @@
     "selenium-webdriver": "^4.1.2"
   },
   "devDependencies": {
+    "@types/selenium-webdriver": "^4.1.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
