--- a/.github/workflows/deploy_cloud_functions.yml
+++ b/.github/workflows/deploy_cloud_functions.yml
@@ -26,8 +26,21 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install packages
+      - uses: actions/setup-node@v3
         with:
-          args: npm install
+          node-version: 16
+          cache: npm
+      # https://dev.classmethod.jp/articles/caching-dependencies-in-workflow-execution-on-github-actions/
+      - uses: actions/cache@v3
+        id: node_modules_cache_id
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      - run: echo '${{ toJSON(steps.node_modules_cache_id.outputs) }}'
+      - if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
+        run: npm install
 
       # https://github.com/marketplace/actions/github-action-for-firebase
       - name: Deploy to Firebase
