--- a/.github/workflows/deploy_cloud_functions.yml
+++ b/.github/workflows/deploy_cloud_functions.yml
@@ -39,7 +39,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
       - run: echo '${{ toJSON(steps.node_modules_cache_id.outputs) }}'
       - if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
-        run: npm install
+        run: cd functions && npm install
 
       # https://github.com/marketplace/actions/github-action-for-firebase
       - name: Deploy to Firebase
