--- a/.github/workflows/deploy_gas.yml
+++ b/.github/workflows/deploy_gas.yml
@@ -36,10 +36,10 @@ jobs:
           npm install clasp -g
       - name: Create clasprc.json
         run: |
-          echo \{\"token\":\{\"access_token\":\"${{ secrets.CLASP_ACCESS_TOKEN}}\",\"scope\":\"https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive.metadata.readonly https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.webapp.deploy https://www.googleapis.com/auth/logging.read openid https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/script.deployments https://www.googleapis.com/auth/service.management https://www.googleapis.com/auth/cloud-platform\",\"token_type\":\"Bearer\",\"id_token\":\"${{ secrets.CLASP_ID_TOKEN }}\",\"expiry_date\":1620870307822,\"refresh_token\":\"${{ secrets.CLASP_REFRESH_TOKEN }}\"\},\"oauth2ClientSettings\":\{\"clientId\":\"${{ secrets.CLASP_CLIENTID }}\",\"clientSecret\":\"${{ secrets.CLASP_CLIENTSECRET }}\",\"redirectUri\":\"http://localhost\"\},\"isLocalCreds\":false\} > ~/.clasprc.json
+          echo \{\"token\":\{\"access_token\":\"${{ secrets.CLASP_ACCESS_TOKEN}}\",\"scope\":\"https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive.metadata.readonly https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.webapp.deploy https://www.googleapis.com/auth/logging.read openid https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/script.deployments https://www.googleapis.com/auth/service.management https://www.googleapis.com/auth/cloud-platform\",\"token_type\":\"Bearer\",\"id_token\":\"${{ secrets.CLASP_ID_TOKEN }}\",\"expiry_date\":1620870307822,\"refresh_token\":\"${{ secrets.CLASP_REFRESH_TOKEN }}\"\},\"oauth2ClientSettings\":\{\"clientId\":\"${{ secrets.CLASP_CLIENTID }}\",\"clientSecret\":\"${{ secrets.CLASP_CLIENTSECRET }}\",\"redirectUri\":\"http://localhost\"\},\"isLocalCreds\":false\} > ./.clasprc.json
       - name: Check current directory
         run: |
-          ls
+          pwd
       - name: Deploy
         run: |
           clasp deploy --deploymentId ${{ secrets.CLASP_PROD_DEPLOYMENT_ID }} --description "本番環境"
